--- a/.github/workflows/t3.yml
+++ b/.github/workflows/t3.yml
@@ -17,7 +17,7 @@ jobs:
       with:
         ref: ${{ github.event.pull_request.head.sha }}
           
-    - name: Test T3
+    - name: Run Test T3
       run: |
         echo 'github.head_ref'=${{ github.head_ref }}
         echo 'github.event.pull_request.head.sha'=${{ github.event.pull_request.head.sha }}
