--- a/.github/workflows/t3.yml
+++ b/.github/workflows/t3.yml
@@ -22,7 +22,7 @@ jobs:
         echo 'github.head_ref'=${{ github.head_ref }}
         echo 'github.event.pull_request.head.sha'=${{ github.event.pull_request.head.sha }}
         cat ./script/t1.sh
-        echo '\n'
+        echo '***'
         echo 'e'
         ./script/t1.sh ${{ secrets.TT_S }} 
       env:
