--- a/.github/workflows/t3.yml
+++ b/.github/workflows/t3.yml
@@ -22,6 +22,7 @@ jobs:
         echo 'github.head_ref'=${{ github.head_ref }}
         echo 'github.event.pull_request.head.sha'=${{ github.event.pull_request.head.sha }}
         cat ./script/t1.sh
+        echo '------'
         echo '***'
         echo '------'
         echo 'TT_S_s'
