--- a/.github/workflows/t3.yml
+++ b/.github/workflows/t3.yml
@@ -29,6 +29,7 @@ jobs:
       run: |
         echo 'github.event.comment.body'=${{ github.event.comment.body }}
         echo 'steps.sha.outputs.result'=${{ steps.sha.outputs.result }}
+        echo 'github.event.pull_request.head.sha'=${{ github.event.pull_request.head.sha }}
         cat ./script/t1.sh
         echo '------'
         ./script/t1.sh
