--- a/.github/workflows/t3.yml
+++ b/.github/workflows/t3.yml
@@ -18,17 +18,31 @@ jobs:
     runs-on: macos-latest
   
     steps:
+
+    - name: Get the latest commit SHA
+      id: sha
+      uses: actions/github-script@v6
+      with:
+        result-encoding: string
+        script: |
+          const { owner, repo, number } = context.issue
+          const pr = await github.rest.pulls.get({
+            owner,
+            repo,
+            pull_number: number,
+          })
+          return pr.data.head.sha
     
     - name: Checkout repository
       uses: actions/checkout@v3
       with:
-        ref: ${{ github.event.pull_request.head.sha }}
+        ref: ${{ steps.sha.outputs.result }}
         fetch-depth: 5
           
     - name: Run Test T3
       run: |
         echo 'github.event.comment.body'=${{ github.event.comment.body }}
-        echo 'steps.sha.outputs.result'= steps.sha.outputs.result
+        echo 'steps.sha.outputs.result'= ${{ steps.sha.outputs.result }}
         echo 'github.event.pull_request.head.sha'=${{ github.event.pull_request.head.sha }}
         cat ./script/t1.sh
         echo '------'
