--- a/.github/workflows/t3.yml
+++ b/.github/workflows/t3.yml
@@ -1,8 +1,8 @@
 name: T3
 
 on:
-  pull_request:
-    types: [assigned, opened, synchronize, reopened]
+  issue_comment:
+    types: [created, edited]
   
 jobs:
 
